# ossa-cookbook

./: .gitignore  Cargo.toml  Makefile  README.md  tailwind.config.js
img/: recipe_icon.excalidraw
src/: cli.rs  main.rs  state.rs
src/gui/: form.rs  layout.rs  mod.rs  navbar.rs
src/gui/layout/: mod.rs
src/gui/layout/cookbook/: form.rs
src/gui/layout/recipe/: form.rs  mod.rs
src/state/: internal.rs
style/: style.css
