[package]
name = "odyssey-cookbook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.10", features = ["derive"] }
dioxus = {version = "0.6.3"}
dioxus-desktop = "0.6.3"
dioxus-heroicons = {git = "https://github.com/jprider63/dioxus-heroicons.git", rev="454275f44cff27306ddd55601129a495aeb8c92c"}
dioxus_markdown = {git = "https://github.com/jprider63/dioxus-markdown.git", rev="11fe6502896870bf328b4c6475aaf48112e83cdd"}
futures = "*"
keyboard-types = "*"
im = "15.1.0"
manganis = "*"
odyssey-core = {path = "/Users/james/Documents/Projects/odyssey/odyssey-core"}
odyssey-crdt = {path = "/Users/james/Documents/Projects/odyssey/odyssey-crdt"}
serde = "*"
tauri = "2.2.4"

# tmp?
tokio = {version="*", features=["rt","rt-multi-thread","net"]}
tokio-util = {version="*", features=["codec"]}

typeable = {path = "/Users/james/Documents/Projects/odyssey/typeable", features = ["serde", "im"]}
