[package]
name = "odyssey-cookbook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.10", features = ["derive"] }
dioxus = {git = "https://github.com/jprider63/dioxus.git", rev="cd3ff6d3644347163c249da8293a76db02044d03"} # {version = "0.6.3"}
dioxus-desktop = {git = "https://github.com/jprider63/dioxus.git", rev="cd3ff6d3644347163c249da8293a76db02044d03"} # {version = "0.6.3"}
dioxus-heroicons = {git = "https://github.com/jprider63/dioxus-heroicons.git", rev="0407484985665d5a4ebac3fec045170c18e447ed"} # rev="454275f44cff27306ddd55601129a495aeb8c92c"}
dioxus_markdown = {git = "https://github.com/jprider63/dioxus-markdown.git", rev="e72cea3f58ece80268241f1bc8b025c2b63d9324"}
futures = "*"
keyboard-types = "*"
im = "15.1.0"
manganis = "*"
ossa-core = {git = "https://github.com/jprider63/odyssey.git", rev="11c8ae271b3b7763e18e9813416abca9f010ab70"}
ossa-crdt = {git = "https://github.com/jprider63/odyssey.git", rev="11c8ae271b3b7763e18e9813416abca9f010ab70"}
ossa-dioxus = {git = "https://github.com/jprider63/odyssey.git", rev="11c8ae271b3b7763e18e9813416abca9f010ab70"}
typeable = {git = "https://github.com/jprider63/odyssey.git", rev="11c8ae271b3b7763e18e9813416abca9f010ab70", features=["im"]}
serde = "*"
tauri = "2.2.4"
tracing = "*"
tracing-subscriber = "*"

# tmp?
tokio = {version="*", features=["rt","rt-multi-thread","net"]}
tokio-util = {version="*", features=["codec"]}

