[package]
name = "ossa-cookbook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.10", features = ["derive"] }
dioxus = {git = "https://github.com/jprider63/dioxus.git", rev="cd3ff6d3644347163c249da8293a76db02044d03"} # {version = "0.6.3"}
dioxus-desktop = {git = "https://github.com/jprider63/dioxus.git", rev="cd3ff6d3644347163c249da8293a76db02044d03"} # {version = "0.6.3"}
dioxus-heroicons = {git = "https://github.com/jprider63/dioxus-heroicons.git", rev="0407484985665d5a4ebac3fec045170c18e447ed"} # rev="454275f44cff27306ddd55601129a495aeb8c92c"}
dioxus_markdown = {git = "https://github.com/jprider63/dioxus-markdown.git", rev="e72cea3f58ece80268241f1bc8b025c2b63d9324"}
futures = "*"
keyboard-types = "*"
im = "15.1.0"
manganis = "*"
ossa-core = {git = "https://github.com/jprider63/ossa.git", rev="5130cd3f4709b94a7c68e16a7036635d7d8b5f02"}
ossa-crdt = {git = "https://github.com/jprider63/ossa.git", rev="5130cd3f4709b94a7c68e16a7036635d7d8b5f02"}
ossa-dioxus = {git = "https://github.com/jprider63/ossa.git", rev="5130cd3f4709b94a7c68e16a7036635d7d8b5f02"}
ossa-typeable = {git = "https://github.com/jprider63/ossa.git", rev="5130cd3f4709b94a7c68e16a7036635d7d8b5f02", features=["im"]}
# ossa-core = {path="../ossa/ossa-core"}
# ossa-crdt = {path="../ossa/ossa-crdt"} 
# ossa-dioxus = {path="../ossa/ossa-dioxus"} 
# ossa-typeable = {path="../ossa/ossa-typeable", features=["im"]}
serde = "*"
tauri = "2.2.4"
tracing = "*"
tracing-subscriber = "*"

# tmp?
tokio = {version="*", features=["rt","rt-multi-thread","net"]}
tokio-util = {version="*", features=["codec"]}

